--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "ag-grid-community": "^29.2.0",
     "ag-grid-react": "^29.2.0",
+    "convex-hull": "^1.0.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "react": "^18.2.0",
