--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ag-grid-community": "^29.2.0",
     "ag-grid-react": "^29.2.0",
+    "bootstrap": "^4.6.0",
     "convex-hull": "^1.0.3",
     "cors": "^2.8.5",
+    "delaunator": "^5.0.0",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
