--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.1",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@popperjs/core": "^2.11.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -23,6 +28,8 @@
     "react-table": "^7.8.0",
     "react-virtualized": "^9.22.4",
     "sqlite3": "^5.1.6",
+    "styled-components": "^5.3.10",
+    "vanta": "^0.5.24",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "prettier": "^2.8.8",
     "tailwindcss": "^3.3.1"
   }
 }
