--- a/package.json
+++ b/package.json
@@ -9,24 +9,31 @@
     "@mui/material": "^5.13.1",
     "@mui/styled-engine-sc": "^5.12.0",
     "@popperjs/core": "^2.11.7",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "ag-grid-community": "^29.2.0",
     "ag-grid-react": "^29.2.0",
     "bootstrap": "^4.6.0",
     "convex-hull": "^1.0.3",
     "cors": "^2.8.5",
+    "cubic-spline": "^3.0.3",
+    "cypress": "^12.13.0",
+    "d3": "^7.8.4",
     "delaunator": "^5.0.0",
     "express": "^4.18.2",
+    "heatmap.js": "^2.0.5",
+    "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
+    "plotly.js": "^2.23.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-heatmap.js": "^1.0.0",
+    "react-leaflet": "^4.2.1",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "react-virtualized": "^9.22.4",
+    "simpleheat": "^0.4.0",
     "sqlite3": "^5.1.6",
     "styled-components": "^5.3.10",
     "vanta": "^0.5.24",
@@ -57,6 +64,14 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "eslint": "^8.41.0",
+    "eslint-plugin-cypress": "^2.13.3",
+    "jest": "^27.5.1",
+    "jest-canvas-mock": "^2.5.1",
+    "msw": "^1.2.1",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.1"
   }
